ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-mokhatbat
  annotations:
    cert-manager.io/issuer: letsencrypt-nginx
    nginx.org/proxy-pass-headers: "api_access_token"
  labels:
    app: ingress-mokhatbat
spec:
  tls:
    - hosts:
        - chat.mokhatbat.com
        - chat2.ctech.company
      secretName: letsencrypt-nginx
  rules:
    - host: chat.mokhatbat.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mokhatbat-chatwoot
                port:
                  number: 3000
    - host: chat2.ctech.company
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mokhatbat-chatwoot
                port:
                  number: 3000
  ingressClassName: nginx
